BUGFIX: Image Gallery Sliders now display their selectors well in small spaces.
The new {% spaceless %} tags are there because inline-blocks are sensitive to
whitespace between them, which breaks the carefully designed margins.

--- a/jetstream/static/jetstream/css/blocks/image-gallery-slider.less
+++ b/jetstream/static/jetstream/css/blocks/image-gallery-slider.less
@@ -17,6 +17,7 @@
       margin: 0;
       width: 75px;
       height: 75px;
+      margin: 5px 5px 0 0;
     }
   }
 
@@ -47,4 +48,3 @@
     }
   }
 }
-
